--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,7 +28,7 @@ jobs:
         run: go mod download
 
       - name: Build
-        run: go build -v -o fi
+        run: go build -v -o finfo
 
       - name: Test binary
-        run: ./fi --help
+        run: ./finfo --help
