--- a/.github/release/goreleaser.yaml
+++ b/.github/release/goreleaser.yaml
@@ -95,7 +95,7 @@ release:
     name: finfo
   draft: false
   prerelease: auto
-  name_template: "{{.ProjectName}} v{{.Version}}"
+  name_template: "v{{.Version}}"
   header: |
     ## What's New in v{{.Version}}
 
